# larch

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  Dockerfile  README.md  arboretum.yml  colab-like.yaml  index.html  installation.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
0.1/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
0.1/_modules/: index.html
0.1/api/: dataset.html  datatree.html  index.html  linear.html  model.html  nesting.html
0.1/examples/: index.html
0.1/user-guide/: choice-models.html  data-fundamentals.html  index.html  installation.html  linear-funcs.html
_modules/: index.html
_sources/: installation.md  intro.md
_sources/api/: ~models.md
_sources/user-guide/: choice-models.ipynb  data-fundamentals.ipynb  linear-funcs.ipynb
api/: dataset.html  model.html  nesting.html  ~data.html  ~models.html
dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev/.doctrees/: environment.pickle
dev/_modules/: index.html
dev/api/: dataset.html  datatree.html  index.html  latentclass.html  linear.html  mixtures.html  model.html  modelgroup.html  nesting.html  troubleshooting.html
dev/examples/: index.html
dev/user-guide/: analysis.html  choice-models.html  compute-engines.html  data-fundamentals.html  data-practicum.html  index.html  installation.html  linear-funcs.html
docs/: .buildinfo  _build.py  _build.sh  _config.yml  _toc.yml  conf.py  genindex.html  index.html  index.md  intro.md  search.html  searchindex.js  switcher.json
docs/.doctrees/: index.doctree
docs/_modules/: index.html
docs/_scripts/: developer_doc_title.py  hide_test_cells.py
docs/_templates/: this-version.html  versionn.html
docs/api/: dataset.html  dataset.rst  datatree.html  index.html  index.md  latentclass.rst  linear.html  mixtures.rst  model.html  model.rst  nesting.html  troubleshooting.rst  ~data.md
docs/examples/: index.html  index.md
docs/user-guide/: analysis.ipynb  choice-models.html  choice-models.ipynb  compute-engines.ipynb  data-fundamentals.html  data-fundamentals.ipynb  data-practicum.ipynb  index.html  index.md  installation.html  installation.md  linear-funcs.html  linear-funcs.ipynb
envs/: arboretum.yml  colab-like.yaml  development.yaml  testing.yml  uv-activitysim.sh  uv-dev.sh  uv.sh  windows.yaml
envs/activitysim/: README.md  environment.yaml
examples/exampville/: 202_exville_mc_logsums.html  203_exville_dest.html  251_bySpec.html  index.html
examples/mtc/: 001_mnl.html  017_mnl.html  022_nl.html  index.html
examples/swissmetro/: 101_swissmetro_mnl.html  102-swissmetro-weighted.html  109-swissmetro-nl.html
examples/xlogit-artificial/: xlogit-test.html
exercises/: mixed-logit.ipynb
larch/: __init__.py  compiled.py  datastats.py  exceptions.py  folding.py  omx.py  optimize.py  roles.py
larch/dataset/: __init__.py  choice_avail_reporting.py  construct.py  flow.py  patch.py
larch/examples/: __init__.py
larch/logging/: __init__.py  debug.py
larch/model/: basemodel.py  cascading.py  constraints.py  data_arrays.py  draws.py  from_spec.py  jaxmodel.py  latent_class.py  linear.py  linear_math.py  mixtures.py  numba_optimization.py  numba_stream.py  numbamodel.py  optimization.py  param_core.py  saving.py  single_parameter.py  tree.py
larch/util/: __init__.py  addict_yaml.py  arraytools.py  aster.py  bitmasking.py  bounded_kde.py  cache_requests.py  colors.py  common_functions.py  counting.py  data_expansion.py  data_manipulation.py  dataframe.py  display.py  excel.py  figures.py  histograms.py  html_table_to_txt.py  images.py  interface_info.py  lazy.py  math.py  multiindex.py  namespaces.py  naming.py  overspec_viewer.py  plotting.py  png.py  rate_limiter.py  signal_dict.py  smartread.py  statistics.py  styles.py  summary.py  temporaryfile.py  testing.py  text_manip.py  touch_notifier.py  uid.py  visual_processing.py  (+3 more)
larix/: __init__.py  compiled.py  examples.py  folding.py  latent_class.py  mixtures.py  model.py  omx.py  optimize.py  param_core.py  shorts.py
larix/data_warehouse/: exampville_skims.omx
larix/dataset/: __init__.py  flow.py
larix/model/: basemodel.py  cascading.py  constraints.py  dashboard.py  data_arrays.py  from_spec.py  jaxmodel.py  latent_class.py  linear.py  linear_math.py  mixtures.py  numba_optimization.py  numbamodel.py  optimization.py  param_core.py  persist_flags.py  random.py  saving.py  single_parameter.py  tree.py
larix/util/: bounded_kde.py  excel.py  figures.py  math.py  testing.py
sandbox/: 201_exville_mode_choice.ipynb  MTC-JAX.ipynb  Untitled.ipynb  Untitled1.ipynb  accesssor.ipynb  latent-class-panel.ipynb  sand.py
src/larch/: __init__.py  _optional.py  compiled.py  datastats.py  exceptions.py  folding.py  omx.py  optimize.py  roles.py  shorts.py  warning.py
tests/: 115_panel_latent_class.ipynb  151_panel_latent_class.ipynb  jax-mnl-Copy1.ipynb  jax-mnl.ipynb  latent-class-panel-Copy1.ipynb  latent-class-panel.ipynb  latent-class-simple.ipynb  test_analyze_predictions.py  test_dataset.py  test_doctor.py  test_exampville.py  test_jax.py  test_latent_class.py  test_linear_func.py  test_model.py  test_mtc.py  test_old.py  test_swissmetro.py  test_vehicle.py  xlogit-test.ipynb
tests/test_analyze_predictions/: test_analyze_age.csv  test_analyze_age_binned.csv  test_analyze_age_bool.csv  test_analyze_age_weighted.csv  test_analyze_elasticity_hhinc.csv  test_analyze_elasticity_totcost_1.csv  test_analyze_few_values.csv
tools/: get_version.py  rip_examples.py
user-guide/: choice-models.html  data-fundamentals.html  linear-funcs.html
v6.0/: .buildinfo  genindex.html  index.html  installation.html  intro.html  objects.inv  search.html  searchindex.js
v6.0/.doctrees/: environment.pickle  index.doctree
v6.0/_modules/: index.html
v6.0/api/: dataset.html  datatree.html  index.html  latentclass.html  linear.html  mixtures.html  model.html  modelgroup.html  nesting.html  troubleshooting.html  (+2 more)
(+527 files in other folders)
