[metadata]
name = larch
author = Jeff Newman
author_email = jeff@newman.me
url = https://github.com/jpn--/larch

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.19
    pandas >= 1.2
    pyarrow
    xarray
    numba >= 0.51.2
    numexpr
    filelock
    dask
    networkx
    sharrow >= 2.0.1
    addicty
    jax
    xmle
    rich

[options.package_data]
data_warehouse = *.csv.gz, *.omx, *.zarr.zip

[flake8]
exclude =
    .git,
    __pycache__,
    docs/_build,
    larch/__init__.py
max-line-length = 160
extend-ignore = E203,E722,F541
